welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:10: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
		if (isFacingTrail() == false) 
                                 ^