welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
  



def hunt() 
{
	while (estSurBiscuit() == false ) 
	{ 	
		if (isFacingTrail() == false) 
		{droite() }
		else { baisseBrosse()
		leveBrosse()
		avance() }
		
	}
	baisseBrosse()
	leveBrosse()
	prendBiscuit()
} 


   



def isFacingTrail(c:Color):Boolean = 
{
 if (estFaceMur() == true ){
	return false}

avance()
   if (getCouleurSol() == c) 
   	{recule() ; return true					
  	 }
   else { recule() ; return false
   	  }
}
